--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
     --c-accent: #ff6b08;
     --c-dark-blue: #253045;
     --c-grey-blue: #4a5771;
-    --c-grey-light: #bebebe;
+    --c-grey-light: #f1f2f2;
     --c-grey: #bcc1d2;
     /* text */
     --txt-c-dark: var(--c-dark);
@@ -33,7 +33,7 @@ body {
     flex-direction: column;
     align-items: center;
     max-width: 980px;
-    margin: 0px auto;
+    margin: 40px auto;
 }
 
 .container-left {
@@ -106,8 +106,9 @@ body {
     align-items: center;
 }
 
-.download-btm :hover {
-    transform: scale(1.2);
+.download-btm:hover {
+    transition: var(--animation-transition);
+    font-size: 20px;
 }
 
 .download-icon i {
@@ -235,11 +236,11 @@ body {
     z-index: 1;
     font-weight: bold;
     text-transform: uppercase;
-    color: var(--c-grey-light);
+    color: var(--c-grey-blue);
     writing-mode: tb-rl;
     margin: auto;
     position: relative;
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 
@@ -267,6 +268,7 @@ body {
     font-size: 40px;
     line-height: 40px;
     text-decoration: none;
+    transition: var(--animation-transition);
 }
 
 .educatoin-link:hover {
@@ -287,6 +289,25 @@ body {
     margin: 0 0 55px 0;
 }
 
+.skills-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    background: var(--c-light);
+}
+
+.skills-img-text {
+    font-size: 170px;
+    line-height: 300px;
+    text-transform: uppercase;
+    z-index: 1;
+    font-weight: bold;
+    color: var(--c-grey-blue);
+    margin: auto;
+    position: relative;
+    opacity: 0.3;
+}
+
 
 /* EXPIRIENCE */
 
@@ -295,21 +316,29 @@ body {
     flex-direction: column;
 }
 
+.expiriens-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 93%;
+    margin: 20px 10px 20px 10px;
+}
+
 .expirience-title {
     color: var(--txt-c-light);
-    font-size: 70px;
-    line-height: 84px;
-    width: 630px;
+    font-size: 30px;
+    line-height: 44px;
     margin-top: 0;
     margin-bottom: 30px;
     text-transform: uppercase;
-    text-align: center;
 }
 
 .expirience-skill {
     align-items: center;
-    margin-bottom: 20px;
-    margin-left: 28px;
+}
+
+.expirience-soft-skill {
+    margin-top: 45px;
 }
 
 .expirience-dots {
@@ -321,9 +350,9 @@ body {
 }
 
 .expirience-dots-items {
-    color: var(--c-grey-blue);
-    font-size: 20px;
-    margin-right: 15px;
+    color: var(--txt-c-grey);
+    font-size: 15px;
+    margin-right: 10px;
 }
 
 .expirience-dots-item-accent {
@@ -333,16 +362,15 @@ body {
 .expirience-text {
     color: var(--txt-c-light);
     margin: 0px;
-    font-size: 35px;
-    line-height: 35px;
-    margin-left: 30px;
+    font-size: 25px;
+    line-height: 20px;
+    margin-left: 10px;
 }
 
 .expirience-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
 }
 
 
