--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,11 +32,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 980px;
+    min-width: 320px;
     margin: 40px auto;
 }
 
 .container-left {
+display:flex;
+flex-direction: row;
     align-items: flex-start;
     background: var(--c-light);
 }
@@ -78,7 +80,7 @@ body {
 
 .menu-item {
     font-weight: bold;
-    margin-right: 15px;
+    margin-right: 30px;
     font-size: 15px;
     line-height: 18px;
     letter-spacing: 0.05em;
@@ -201,7 +203,7 @@ body {
 /* ABOUT PAGE */
 
 .about-content-wrapper {
-    position: relative;
+    margin-left: 20px;
 }
 
 .about-title {
@@ -224,15 +226,16 @@ body {
 .about-img-container {
     position: absolute;
     justify-content: right;
-    left: 410px;
-    margin-top: -108px;
+    right: 0px;
+  
 }
 
 .about-img-text {
     font-size: 250px;
-    line-height: 300px;
-    right: -271px;
-    top: -120px;
+    /* line-height: 300px;
+    text-align: end;
+    left: 700px;
+    top: -120px; */
     z-index: 1;
     font-weight: bold;
     text-transform: uppercase;
