--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,16 +29,16 @@ body {
 
 .container {
     background: var(--c-dark);
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 320px;
     margin: 40px auto;
 }
 
 .container-left {
-display:flex;
-flex-direction: row;
+    display:flex;
+    flex-direction: row;
     align-items: flex-start;
     background: var(--c-light);
 }
@@ -176,6 +176,9 @@ flex-direction: row;
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 85%;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .front-page-descriptoin-text {
@@ -185,7 +188,7 @@ flex-direction: row;
     width: 430px;
     margin: 0 0 40px 0;
     text-align: left;
-    margin-left: -40px;
+    margin-left: 20px;
 }
 
 .front-page-laptop {
@@ -194,8 +197,7 @@ flex-direction: row;
 
 .front-page-laptop {
     position: relative;
-    right: -90px;
-    bottom: 30px;
+    
     z-index: 2;
 }
 
@@ -243,7 +245,7 @@ flex-direction: row;
     writing-mode: tb-rl;
     margin: auto;
     position: relative;
-    opacity: 0.3;
+    opacity: 0.6;
 }
 
 
@@ -262,7 +264,7 @@ flex-direction: row;
     font-size: 70px;
     line-height: 84px;
     width: 630px;
-    margin-top: 0;
+    margin-top: 30px;
     text-transform: uppercase;
 }
 
@@ -289,10 +291,12 @@ flex-direction: row;
     font-size: 17px;
     line-height: 150%;
     color: var(--txt-c-light);
-    margin: 0 0 55px 0;
+    margin: 0 0 30px 0;
 }
-
+/* SKILLS */
 .skills-container {
+    width: 100%;
+    justify-content: space-between;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -306,9 +310,11 @@ flex-direction: row;
     z-index: 1;
     font-weight: bold;
     color: var(--c-grey-blue);
-    margin: auto;
-    position: relative;
-    opacity: 0.3;
+    margin: 42px 102px;
+    opacity: 0.6;
+}
+.laptop-web {
+margin-right: 30px;
 }
 
 
@@ -322,9 +328,9 @@ flex-direction: row;
 .expiriens-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 93%;
-    margin: 20px 10px 20px 10px;
+    justify-content: space-around;
+    width: 95%;
+    margin: 20px 10px;
 }
 
 .expirience-title {
@@ -377,17 +383,17 @@ flex-direction: row;
 }
 
 
+
 /*  FOOTER */
 
 .footer-container {
+    width:100%;
     background: var(--c-light);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    max-width: 980px;
-    margin: 0px auto;
-}
+   }
 
 .footer-main-contact {
     width: calc(50% + 140px);
@@ -482,4 +488,243 @@ flex-direction: row;
 .mail {
     font-size: 22px;
     margin-top: 13px;
+}
+/* responsive starts here */
+
+
+
+@media screen and (max-width: 1199px) {
+.container {
+width: 960px;
+}
+.expiriens-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+    
+}
+
+.skills-img-text {
+    font-size: 150px;
+    margin: 0px 90px 0px 20px;
+}
+.laptop-web {
+    margin-right: 30px;
+    margin-top: 10px;
+    width: 30%;
+}
+
+.expirience-dots last-child{
+   
+    margin-bottom: 20px;
+}
+.content-container {
+    margin: 40px;
+}
+.footer-container {
+    background: var(--c-light);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+}
+
+@media screen and (max-width: 911px) {
+.container {
+width: 720px;
+}
+}
+
+@media screen and (max-width: 767px) {
+.container {
+width: 540px;
+}
+}
+
+@media screen and (max-width: 575px) {
+    .container {
+    width: 160%;
+    padding: 0 15px;
+}
+.front-page-my-name {
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 50px;
+    margin-top: -195px;
+    margin-left: -295px;
+}
+.my-photo {
+    width: 220px;
+    height: 220px;
+    margin-left: 300px;
+    margin-top: 20px;
+    border-radius: 20px;
+}
+.front-page-profesional {
+    font-size: 50px;
+    line-height: 65px;
+    width: 400px;
+    margin-left: -55x;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+.front-page-part-1 {
+    margin-right: 40px;
+}
+
+.front-page-part-2 {
+    margin-left: 40px;
+}
+
+.front-page-descriptoin {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.front-page-descriptoin-text {
+    color: var(--txt-c-light);
+    font-size: 19px;
+    line-height: 150%;
+    width: 430px;
+    margin: 0 0 40px 0;
+    text-align: left;
+    margin-left: 20px;
+}
+
+.front-page-laptop {
+    width: 300px;
+}
+
+.front-page-laptop {
+    position: relative;
+    
+    z-index: 2;
+}
+/* ABOUT PAGE */
+
+.about-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.about-title {
+    font-size: 50px;
+    line-height: 55px;
+    width: 100%;
+    margin-top: 0;
+    text-transform: uppercase;
+}
+
+.about-text {
+    width: 110%;
+    font-size: 20px;
+    line-height: 35px;
+}
+
+.about-img-container {
+    position: absolute;
+    justify-content: right;
+    right: 0px;
+  
+}
+
+.about-img-text {
+    font-size: 225px;
+    line-height: 300px;
+    text-align: end;
+    left: 315px;
+    
+}
+.skills-container {
+    width: 105%;
+    
+}
+
+.skills-img-text {
+    font-size: 100px;
+    line-height: 200px; 
+    margin: 0px 40px 20px 20px;
+    
+}
+.laptop-web {
+    margin-right: 50px;
+    width: 25%;
+}
+.content-container {
+    width:0;
+    display: flex;
+    flex-direction: row;
+    margin: 0px;
+    justify-content: space-between;
+}
+
+.expiriens-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 65%;
+    margin: 20px 10px;
+}
+
+.expirience-title {
+    
+    font-size: 30px;
+    line-height: 44px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+
+.expirience-skill {
+    align-items: center;
+}
+
+.expirience-soft-skill {
+    margin-top: 45px;
+}
+
+.expirience-dots {
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+.expirience-dots-items {
+    color: var(--txt-c-grey);
+    font-size: 15px;
+    margin-right: 10px;
+}
+
+.expirience-dots-item-accent {
+    color: var(--c-accent);
+}
+
+.expirience-text {
+    color: var(--txt-c-light);
+    margin: 0px;
+    font-size: 25px;
+    line-height: 20px;
+    margin-left: 10px;
+}
+
+.expirience-container {
+    margin-right: 155px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.expirience-container:last-child {
+margin-right: 10px;
+}
 }
