--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,7 @@ body {
 }
 
 .container-left {
+    width: 100%;
     display:flex;
     flex-direction: row;
     align-items: flex-start;
@@ -641,7 +642,7 @@ width: 105%;
     font-size: 240px;
     line-height: 0px;
     text-align: end;
-    left: 325px;
+    left: 395px;
     
 }
 .about-text {
@@ -663,13 +664,13 @@ line-height: 35px;
 }
 
 .skills-img-text {
-    font-size: 100px;
+    font-size: 110px;
     line-height: 200px; 
-    margin: 0px 40px 20px 20px;
+    margin: 10px 40px 20px 20px;
     
 }
 .laptop-web {
-    margin-right: 35px;
+    margin-right: 55px;
     width: 25%;
 }
 .content-container {
@@ -744,8 +745,7 @@ line-height: 35px;
 /* Footer */
 
 .footer-container {
-    width: 835px;
-  
+    width: 945px;
     display: flex;
     flex-direction: column;
     align-items: center;
